# strata

./: .gitattributes  .gitignore  ASSUMPTIONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRODUCT_REQUIREMENTS.md  README.md  ROADMAP.md  SECURITY.md  TASKS.md  THREAT_MODEL.md  humazie.config.ts  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
app/: bootstrap.py  main.py
app/bridge/: ai_bridge.py  collaboration_bridge.py  envelope.py  export_bridge.py  graph_bridge.py  job_bridge.py  layer_bridge.py  notes_bridge.py  operations_bridge.py  search_bridge.py  settings_bridge.py  snapshot_bridge.py  views_bridge.py  workspace_bridge.py
app/desktop/: application.py  main_window.py  screen_security.py  webchannel.py  webengine.py
app/domain/: ai.py  collaboration.py  conversations.py  errors.py  export.py  graph.py  history.py  ids.py  jobs.py  knowledge.py  layer.py  note.py  operations.py  prompts.py  schema.py  versions.py  views.py  workspace.py
app/infrastructure/ai_providers/: anthropic.py  base.py  claude_cli.py  openai_compatible.py
app/infrastructure/crdt/: __init__.py  conflicts.py  document.py  relay.py  relay_server.py  store.py  updates.py
app/infrastructure/encryption/: container.py  keyholder.py  layer_header.py  primitives.py
app/services/: ai_generation_service.py  ai_history_service.py  ai_service.py  capture_service.py  collaboration_service.py  connection_service.py  container.py  context_export_service.py  conversation_service.py  demo_content.py  encryption_service.py  graph_service.py  job_service.py  knowledge_service.py  memory_service.py  note_service.py  operation_service.py  private_layer_access.py  prompt_library_service.py  retrieval_service.py  review_service.py  search_service.py  settings_service.py  snapshot_service.py  synthesis_service.py  version_service.py  view_service.py  watch_service.py  workspace_service.py
docs/: GUIDE.md  ai-memory-design.md  current-architecture.md  implementation-plan.md  security-and-privacy.md  target-architecture.md
docs/adr/: 0001-python-pyside6-desktop-host.md  0002-qt-webengine-react-frontend.md  0003-qt-webchannel-bridge-protocol.md  0004-private-object-storage.md  0005-encryption-primitives.md  0006-crdt-selection.md  0007-search-architecture.md  0008-ai-provider-abstraction.md  0009-context-export-format.md  0010-3d-graph-architecture.md  0011-python-version-target.md  README.md
docs/architecture/: storage-layout.md  system-architecture.md
docs/export-format/: README.md
docs/product/: glossary.md
docs/security/: encryption-format.md
frontend/: eslint.config.js  humazie.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: humazie-entry.tsx  main.tsx
humazie/: .env.example  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
humazie/dashboard/: package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo
humazie/docs/: SETUP.md  architecture.md
humazie/examples/: sample-summary.md
humazie/prisma/: schema.prisma
humazie/src/: cli.ts  config.ts  review.ts  types.ts
humazie/tests/: config.test.ts  flows.test.ts  logging.test.ts  safety.test.ts
packaging/linux/: build.sh  strata.desktop
packaging/pyinstaller/: strata.spec
packaging/windows/: build.ps1  strata.iss
scripts/: check.ps1  check_version.py  dev.ps1  make_icons.py  scan_plaintext.py  sync_qwebchannel.py
tests/: conftest.py
tests/e2e/: _shell_support.py  conftest.py  test_desktop_shell.py  test_interactions.py
tests/integration/: test_ai_bridge.py  test_bridges.py  test_collaboration_service.py  test_network_relay.py  test_notes_bridge.py  test_operations_bridge.py  test_save_output.py
tests/performance/: test_scale.py
tests/security/: test_ai_history_privacy.py  test_ai_policy.py  test_claude_cli.py  test_crdt_encryption.py  test_encryption.py  test_fuzz_untrusted_input.py  test_index_privacy.py  test_path_safety.py  test_plaintext_scanner.py  test_privacy_boundaries.py  test_private_layer_end_to_end.py  test_prompt_injection_pipeline.py  test_url_import_ssrf.py
tests/unit/: test_ai_generation.py  test_ai_history.py  test_ai_providers.py  test_atomic_replace.py  test_capture.py  test_connections.py  test_context_export.py  test_conversations.py  test_crdt_spike.py  test_crdt_store.py  test_credentials.py  test_envelope.py  test_graph_advanced.py  test_knowledge_service.py  test_note_operations.py  test_operations.py  test_prompt_library.py  test_retrieval.py  test_screen_security.py  test_search.py  test_snapshots.py  test_structured_memory.py  test_synthesis.py  test_version_consistency.py  test_versions.py  test_views.py  test_workspace_and_graph.py
(+142 files in other folders)
