[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "strata"
version = "0.1.0"
description = "Strata — a local-first, encrypted, collaborative, AI-native spatial knowledge workspace"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "pluto", email = "valcano103@gmail.com" }]

dependencies = [
    "PySide6==6.8.1",
    "pydantic==2.10.4",
    "cryptography==44.0.0",
    "argon2-cffi==23.1.0",
    "PyNaCl==1.5.0",
    "networkx==3.4.2",
    "numpy==2.2.1",
    "keyring==25.6.0",
    "watchdog==6.0.0",
    "httpx==0.28.1",
    "structlog==24.4.0",
    "PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-qt==4.4.0",
    "pytest-asyncio==0.25.2",
    "respx==0.22.0",
    "ruff==0.8.6",
    "mypy==1.14.1",
    "pyinstaller==6.11.1",
    "types-PyYAML==6.0.12.20241230",
]

[project.scripts]
strata = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "S",   # bandit
    "ANN", # annotations
    "RUF",
]
ignore = [
    "ANN401", # allow typing.Any where justified (documented)
    "S101",   # assert (allowed in tests; see per-file ignores)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "S105", "S106"]
"scripts/**" = ["S101", "ANN"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
disallow_any_generics = true
plugins = []
mypy_path = "."
exclude = ['^build/', '^dist/', '^frontend/']

[[tool.mypy.overrides]]
module = ["PySide6.*", "keyring.*", "networkx.*", "nacl.*", "argon2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "security: security-critical behaviour",
    "gui: requires a Qt application instance",
    "slow: long-running",
]
filterwarnings = ["error::DeprecationWarning:app.*"]
