[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "strata"
version = "1.1.1"
description = "Strata — a local-first, encrypted, collaborative, AI-native spatial knowledge workspace"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "pluto", email = "valcano103@gmail.com" }]

dependencies = [
    "PySide6==6.11.1",
    "pycrdt==0.14.1",
    "pydantic==2.13.4",
    "cryptography==49.0.0",
    "argon2-cffi==25.1.0",
    "PyNaCl==1.6.2",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "keyring==25.7.0",
    "watchdog==6.0.0",
    "httpx==0.28.1",
    "structlog==26.1.0",
    "PyYAML==6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "hypothesis==6.156.6",
    "pytest-qt==4.5.0",
    "pytest-asyncio==1.4.0",
    "respx==0.23.1",
    "ruff==0.15.21",
    "mypy==2.3.0",
    "pyinstaller==6.21.0",
    "types-PyYAML==6.0.12.20260518",
]

[project.scripts]
strata = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "S",   # bandit
    "ANN", # annotations
    "RUF",
]
ignore = [
    "ANN401", # allow typing.Any where justified (documented)
    "S101",   # assert (allowed in tests; see per-file ignores)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "S105", "S106"]
"scripts/**" = ["S101", "ANN"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
disallow_any_generics = true
plugins = []
mypy_path = "."
exclude = ['^build/', '^dist/', '^frontend/']

[[tool.mypy.overrides]]
module = ["PySide6.*", "keyring.*", "networkx.*", "nacl.*", "argon2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "security: security-critical behaviour",
    "gui: requires a Qt application instance",
    "slow: long-running",
    "performance: scale/latency benchmarks (FR-193)",
]
filterwarnings = ["error::DeprecationWarning:app.*"]
